--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # Database
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres?user=postgres.fekkheqeedvhiiqrcogs&password=naufalichsan
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.fekkheqeedvhiiqrcogs
 spring.datasource.password=naufalichsan
 
 # Hibernate / JPA
