--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,3 @@
-spring.application.name=buyProduct
-spring.profiles.active=${PRODUCTION:dev}
-management.endpoints.web.exposure.include=*
-
 # Database
 spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
 spring.datasource.username=postgres.iacwzqglvnjxhewbvqau
@@ -9,5 +5,6 @@ spring.datasource.password=Johaneswisa2003
 
 # Hibernate / JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
